tests/eval_compile_fails/incorrect_verbosity_should_fail_compiles.rs
use cli_toolbox::eval;

fn main() {
    eval! { @err-terse println!("this should fail") }

    eval! { @err-verbose println!("this should fail") }

    eval! { @foo println!("this should fail") }
}